fix text shift

--- a/apps/client/src/features/page-history/components/css/history-diff.module.css
+++ b/apps/client/src/features/page-history/components/css/history-diff.module.css
@@ -12,8 +12,6 @@
 :global(.history-diff-added) {
   background: light-dark(#e1f3f2, #01654a) !important;
   color: light-dark(#007b69, #cafff7) !important;
-  border-radius: rem(2px);
-  padding: 0 rem(2px);
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
 }
